[tool.poetry]
name = "astroglial_segmentation"
version = "0.1.0"
description = "doing cell detection and segmentation of radial glial of zebra fish brain cells"
authors = ["javidr <javidr@ntnu.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.18"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
opencv-python = "^4.8.1.78"
cellpose = "2.3.2"
suite2p = "0.14.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
