[tool.poetry]
name = "astroglial_segmentation"
version = "1.2.4"
description = "doing cell detection and segmentation of radial glial of zebra fish brain cells"
authors = ["javidr <javidr@ntnu.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^2.0.2"
matplotlib = "^3.9.4"
opencv-python = "^4.8.1.78"
cellpose = "^3.1.1.2"
suite2p = "^0.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
